# Real-Estate-Auction

./: .gitignore  README.md  agents.py  app.py  app2.py  cli.py  config.py  ingest.py  providers.py  pyproject.toml  quiz.py  requirement.txt  requirements.txt  router.py
.streamlit/: config.toml
backup/: app-260619.py  app-260620.py
data/cases/: sample_cases.json
data/glossary/: glossary.json
data/laws/: civil_execution_act.md  housing_lease_protection_act.md
data/price_oracle/: auction_results_1.csv  auction_results_10.csv  auction_results_2.csv  auction_results_3.csv  auction_results_4.csv  auction_results_5.csv  auction_results_6.csv  auction_results_7.csv  auction_results_8.csv  auction_results_9.csv
data/procedures/: auction_procedure_guide.md
docs/: 부동산 경매 AI 튜터 화면 설계서.docx  부동산 경매 교육 멀티에이전트 RAG 기획서.docx  부동산 경매 서비스 기획 및 UI_UX 설계서.docx
html-templates/: auctionagent_ai_infographic.html  sample.html
md/: DEPLOY.md  des.md  dev.md  implementation_plan_01.md  implementation_plan_02.md  implementation_plan_csv01.md  pla.md  price_oracle.md  project0.md  userproject.md  부동산 경매 AI 에이전트 플랫폼 기획안1.md  부동산 경매 AI 에이전트 플랫폼 기획안2.md
pages/: 1_📋_경매_절차_안내.py  AI_입찰가_예측.py  auction_procedure.py  bid_prediction.py  case_quiz.py  glossary.py  rights_analysis.py  경매_용어_사전.py  경매_절차_안내.py  권리분석_튜터.py  사례_퀴즈_연습.py
prompts/: grading_system.prompt  procedure_system.prompt  router_system.prompt  tutor_system.prompt
src/: common.py
src/core/: agents.py  cli.py  common.py  config.py  ingest.py  quiz.py  rag.py  urlcheck.py
src/glossary/: ui.py
src/procedure/: ui.py
(+6 files in other folders)
