[project]
name = "real-estate-auction"
version = "0.1.0"
description = "부동산 경매 교육 멀티에이전트 RAG — 법원경매를 가르치고 연습시키는 학습용 AI 서비스"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.30.0",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-community>=0.2.0",
    "chromadb>=0.4.22",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.5.0",
    "pandas>=2.0.0"
]
